--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-bnsf",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Yeoman generator for bnsf",
   "license": "MIT",
   "main": "app/index.js",
@@ -21,7 +21,8 @@
   },
   "files": [
     "app",
-    "page"
+    "page",
+    "pagebrowserjs"
   ],
   "keywords": [
     "yeoman-generator"
