--- a/app/templates/bower.json
+++ b/app/templates/bower.json
@@ -1,13 +1,13 @@
 {
   "name": "<%= name %>",
-  "version": "1.0.1",
+  "version": "0.0.0",
   "ignore": [
     ".bem/cache",
     "node_modules",
     "libs"
   ],
   "dependencies": {
-    "bnsf": "v0.0.14",
-    "bem-components": "7329bcb78aaee74ab3372d93a026205d7c0ae77e"
+    "bnsf": "0.0.16",
+    "bem-components": "^2.0.0"
   }
 }
