--- a/app/templates/bower.json
+++ b/app/templates/bower.json
@@ -2,12 +2,12 @@
   "name": "<%= name %>",
   "version": "0.0.0",
   "ignore": [
-    ".bem/cache",
+    ".enb/tmp",
     "node_modules",
     "libs"
   ],
   "dependencies": {
-    "bnsf": "^0.4.0",
-    "bem-components": "~2.1.0"
+    "bnsf": "^0.5.0",
+    "bem-components": "2.1.0"
   }
 }
